--- a/user-service/.env
+++ b/user-service/.env
@@ -1,5 +1,5 @@
 APP_ENV =development
-APP_PORT =8080
+APP_PORT =8090
 
 DATABASE_PORT =5432
 DATABASE_HOST =localhost
@@ -13,7 +13,7 @@ JWT_SECRET ="secret"
 JWT_EXPIRATION =3600
 JWT_ISSUER ="user-service"
 
-# REDIS_HOST =localhost
-# REDIS_PORT =6379
+REDIS_HOST =localhost
+REDIS_PORT =6380
 # REDIS_PASSWORD =
 LOG_LEVEL =info 
