add signup feature

--- a/user-service/.env
+++ b/user-service/.env
@@ -16,4 +16,12 @@ JWT_ISSUER ="user-service"
 REDIS_HOST =localhost
 REDIS_PORT =6380
 # REDIS_PASSWORD =
+
+RABBITMQ_HOST =localhost
+RABBITMQ_PORT =5672
+RABBITMQ_USER =guest
+RABBITMQ_PASSWORD =guest
+
+URL_FRONT_FE="http://localhost:3000"
+
 LOG_LEVEL =info 
